kubernetes/examples/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: ingress-wear-watch
  namespace: app-space
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: wear-service  # specify the Service name
                port:
                  number: 8080
            path: /wear
            pathType: Prefix
          - backend:
              service:
                name: video-service  # specify the Service name
                port:
                  number: 8080
            path: /watch
            pathType: Prefix
...
